--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>process-resources</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>update</goal>
                         </goals>
